--- a/svenska/index.html
+++ b/svenska/index.html
@@ -80,26 +80,26 @@ h2{font-size: 25px; height: 25px; line-height: 25px;}
 <p>Nu bryts alla sammansatta ord upp; förleden blir adjektiv till efterleden. Ord som är sammansättningar av ord från främmande språk – exempelvis <em>telefon</em> – 
 påverkas inte.</p>
 
-<p>För att skapa adjektiv av substantiv finns i svenskan en hel del överlappande regler: <em>-isk</em>, <em>-al</em>, <em>-ell</em>, <em>-ig</em>, <em>-lig</em>, och <em>-sam</em>; e.g.
-<em>soviet-isk</em>, <em>kommun-al</em>, <em>kultur-ell</em>, <em>lyx-ig</em>, <em>natur-lig</em>, samt <em>prat-sam</em>. Endast <em>-al</em> får kvarstå, och kan separeras till ett
-eget ord vid tvetydligheter eller outtalbarhet.
+<p>För att skapa adjektiv av substantiv eller verb finns i svenskan en hel del överlappande regler: <em>-isk</em>, <em>-al</em>, <em>-ell</em>, <em>-ig</em>, <em>-lig</em>, och <em>-sam</em>; e.g.
+<em>soviet-isk</em>, <em>kommun-al</em>, <em>kultur-ell</em>, <em>lyx-ig</em>, <em>natur-lig</em>, samt <em>prat-sam</em>. Endast <em>-al</em> får kvarstå, och separeras till ett
+eget ord efter basordet.
 
-Exempelvis <em>smutsig</em> blir då <em>smutsal</em>.</p>
+Exempelvis <em>bestämd</em> blir då <em>bestäm al</em>.</p>
 
-<p>Regeln görs även produktiv, dvs. kan alla substantiv och verb adjektiviseras utan att talaren nödvändigtvis hört det nya ordet användas förut.</p>
+<p>Regeln görs även produktiv, dvs. kan alla substantiv och verb adjektiviseras utan att talaren nödvändigtvis hört det nya ordet användas förut. Måga adjektiv blir nu överflödiga pga. att ett adjektiviserat verb kan ta dess plats; dessa tas bort.</p>
 
 <ul>
-    <li>Stor som en elefant ⟶ Elefantal stor</li>
-    <li>Barnets bilderbok ⟶ Bildal bok av den barn</li>
+    <li>Full som ett ägg ⟶ Fyll al som ägg</li>
+    <li>Barnets bilderbok ⟶ Bild al bok av den barn</li>
 </ul>
 
 <h2>Exempeltext</h2>
 
-<p>Vad fan har säg du just om jag, liten slampa du? Du skola vet att jag har gå ut med toppal betyg från den försvaral makt,
-och har inblanda var i mången hemlig räd mot Al-Qaeda, och jag ha över 300 bekräftal mord. Jag utbildal var inom
-gorillal krigal för och jag var den mest bra prickal skytt i hel den vapenal styrka av Sverige.</p>
+<p>Vad fan har säg du just om jag, krymp al slampa du? Du skola vet att jag har gå ut med topp al betyg från den försvara al makt,
+och har inblanda al var i mången hemlig räd mot Al-Qaeda, och jag ha över 300 bekräfta al mord. Jag utbilda al var inom
+gorilla al krig al för och jag var den mest bra pricka al skytt i hel den vapen al styrka av Sverige.</p>
 
-<p>För jag var du ingenting annan än bara en mål. Jag komma utplåna du med precision lik aldrig har skåda på den här
+<p>För jag var du ingenting sära al än bara en mål. Jag komma utplåna du med precision lik aldrig har skåda på den här
 jord, märk du ord av jag. Tro du att du kunna kom undan med att säg sådan skit till jag via internet? Tänk du igen, jävel du.</p>
 
 <p>Medan två jag tala kontakta jag hemlig nätverk av jag med spion över hel Sverige, och IP av du spåra just nu, så mest bra
@@ -108,25 +108,10 @@ för du att du förbereda du för den storm, kryp. Den storm som utplåna den pa
 <p>Jag kunna var var som mest gärna, när som mest gärna, och jag kunna döda du på över 700 olik sätt, och den var endast
 med två bar hand av jag.</p>
 
-<p>Inte bara var jag utförlig utbildad i ovapenal kamp, utan jag ha även tillgång till hel arsenal av den försvarsmakt, och
-jag komma att använda den till full för att förinta eländig röv av du från den kontinent, liten skit du. Om du bara har kunna
-veta den ohelig straff som liten "smart" kommentar av du var på väg att få ner över du, så kanske du har skola hålla jävelal
-tunga av du. Men den har kunna du inte, den har göra du inte, och nu betala du den pris, jävelal idiot du.</p>
+<p>Inte bara var jag utföra al utbildad i ovapen al kamp, utan jag ha även tillgång till hel arsenal av den försvara al makt, och
+jag komma att använda den för att förinta eländig röv av du från den kontinent, krymp al skit du. Om du bara har kunna
+veta den ohelga al straff som liten "smart" kommentar av du var på väg att få ner över du, så kanske du har skola hålla jävel al
+tunga av du. Men den har kunna du inte, den har göra du inte, och nu betala du den pris, jävel al idiot du.</p>
 
-<p>Jag komma skita vrede över du och du komma att drunkna i den. Du är död, grabb.</p>
+<p>Jag komma skit vrede över du och du komma att drunkna i den. Du är död, grabb.</p>
 
-<!--
-
-<p>Alla grundläggande ordklasser utom verben försvinner; adjektiv och substantiv konverteras rätt av – "glad" betyder nu <em>att vara/är glad</em>, "hund" betyder
-<em>att vara/är en hund</em>.</p>
-
-<p>För att skapa adjektiv tar man verbet och lägger till <em>le</em>. Samma process, fast med <em>re</em>, används för att skapa substantiv.<p>
-<p>Dessa ordklass-skapande partiklar är egentligen egna ord, men uttalas med en mycket kort paus efter verbet de modifierar. Jag använder här en apostrof för att visa detta.</p>
-
-<ul>
-    <li>Han är pratsam ⟶ Han're är prata'le</li>
-    <li>Den som är stark måste också vara snäll ⟶ Den stark're måste också snäll're</li>
-    <li>Brevbäraren kommer inte på söndag ⟶ Den brevbär're inte kom på söndag're</li>
-</ul>
-
--->
