--- a/roman_calendar/index.html
+++ b/roman_calendar/index.html
@@ -58,11 +58,11 @@ pre{
 <h1>Falsehoods Time Travellers Believe about <span class=red>Roman Time</span></h1>
 
 <p>So you bought your very own flux capacitor &mdash; congratulations! However, before you strap it onto your car to go and prevent the assassination of Tiberius Gracchus, you need to know a bit about the Roman calendar. You don't want to embarrass yourself by asking something silly like “Is this 133 BC?” when you arrive, now would you?</p>
-<p>Here, I collect a few pitfalls you might run into when using the Roman calendar, i.e. the one used before Julius Caesar reformed it in 45BC.</p>
+<p>Here, I collect a few pitfalls you might run into when using the Republican calendar, i.e. the one in use before Julius Caesar reformed it in 45BC.</p>
 
 <h2>The Romans years are counted from the founding of Rome</h2>
 
-<p>You might have read somewhere that the Romans counted years in <em>AUC</em> &mdash; <em>Ab Urbe Condita</em>, “from the founding of the city”. Sadly it's not going to be that easy. By far, the common method of specifying what year you were talking about was to mention what consuls were serving during that time. So, for example, you'd have to say something like <em>“During the consulship of L. Licinius Crassus and Q. Mucius Scaevola”</em> to refer to 95 BC.</p>
+<p>You might have read somewhere that the Romans counted years from <em>AUC</em> &mdash; <em>Ab Urbe Condita</em>, “from the founding of the city”. Sadly it's not going to be that easy. By far, the common method of specifying what year you were talking about was to mention what consuls were serving during that time. So, for example, you'd have to say something like <em>“During the consulship of L. Licinius Crassus and Q. Mucius Scaevola”</em> to refer to 95 BC.</p>
 
 <p>A consular term lasted for one year and you'd use the names of the consuls elected first &mdash; if a consul died and was replaced in the middle of the year, the name of the new consul was not used for dating.</p>
 
